5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1764_1577.log
== TEST (2019-05-24 21:56:44) 
-- CODE:
from numpy import *
vet = araray ([10.0, 4.0, 5])
print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:56:44) 
-- CODE:
from numpy import *
vet = araray ([10.0, 4.0, 5])
print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:56:46) 
-- CODE:
from numpy import *
vet = araray ([10.0, 4.0, 5])
print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:56:46) 
-- CODE:
from numpy import *
vet = araray ([10.0, 4.0, 5])
print (vet)

-- EXECUTION TIME:
0.489061
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1577/main.py", line 2, in <module>
    vet = araray ([10.0, 4.0, 5])
NameError: name 'araray' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:56:47) 
-- CODE:
from numpy import *
vet = araray ([10.0, 4.0, 5])
print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:56:47) 
-- CODE:
from numpy import *
vet = araray ([10.0, 4.0, 5])
print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:56:47) 
-- CODE:
from numpy import *
vet = araray ([10.0, 4.0, 5])
print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:56:56) 
-- CODE:
from numpy import *
vet = araray ([10.0, 4.0, 5])
print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:57:13) 
-- CODE:
from numpy import *
vet = array ([10.0, 4.0, 5])
print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:59:30) 
-- CODE:
from numpy import *
a = array(eval(input("aceleraçao:")))
v0= array(eval(input(" velocidade ini: ")))
n= array(eval(input(" numero int: ")))
t=0
vet = array ([10, 4, 5])
print(vet)
print(a)
print(v0)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:59:36) 
-- CODE:
from numpy import *
a = array(eval(input("aceleraçao:")))
v0= array(eval(input(" velocidade ini: ")))
n= array(eval(input(" numero int: ")))
t=0
vet = array ([10, 4, 5])
print(vet)
print(a)
print(v0)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
